added journalTitle example

--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
                     <summary>moloch OR horridus</summary>
                     <p class="example-desc">text contains 'moloch' OR 'horridus' <button class="example-insert">try this search</button></p>
                 </details>
+                <details>
+                    <summary>decapoda&journalTitle=not_like(zootaxa)</summary>
+                    <p class="example-desc">text contains 'decapoda' and the journal is not "Zootaxa" <button class="example-insert">try this search</button></p>
+                </details>
             </div>
         </form>
         
