--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
             <div id="refreshCacheMsg" class="hidden">This will refresh the cache. You probably don’t want to do this.</div>
             
             <div id="quicksearch">
-                <a href="?source=treatments&family=Formicidae" title="find ants"><img src="img/icon_ant.png" width="24"></a> 
-                <a href="?source=treatments&class=Actinopterygii" title="find fishes"><img src="img/icon_fish.png" width="24"></a>
-                <a href="?source=treatments&class=Arachnida" title="find spiders"><img src="img/icon_spider.png" width="24"></a>
-                <a href="?source=treatments&class=Malacostraca" title="find shrimp, crabs and other crustacea"><img src="img/icon_shrimp.png" width="24"></a>
+                <a href="?source=treatments&family=Formicidae"><span aria-label="find ants" data-pop="top" data-pop-no-shadow data-pop-arrow><img src="img/icon_ant.png" width="24"></span></a> 
+                <a href="?source=treatments&class=Actinopterygii"><span aria-label="find fishes" data-pop="top" data-pop-no-shadow data-pop-arrow><img src="img/icon_fish.png" width="24"></span></a>
+                <a href="?source=treatments&class=Arachnida"><span aria-label="find spiders" data-pop="top" data-pop-no-shadow data-pop-arrow><img src="img/icon_spider.png" width="24"></span></a>
+                <a href="?source=treatments&class=Malacostraca"><span aria-label="find shrimp, crabs and other crustacea" data-pop="top" data-pop-no-shadow data-pop-arrow><img src="img/icon_shrimp.png" width="24"></span></a>
             </div>
             <div id="search-help">more example searches</div>
             <div class="examples hidden">
