working with the new db

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
                     <!-- <div id="ns-help">search images</div> -->
                     <div id="ns-widget">
                         <div id="ns" class="ns">
+
+                            <!-- resource is what we want to retrieve and display -->
+                            <!-- resource is either "images" or "treatments" -->
                             <div class="switch resource regular pill green" aria-label="toggle resource" data-pop="right" data-pop-no-shadow="true" data-pop-arrow="true">
                                 <input class="query" type="radio" id="switchResource-1" name="resource" value="images" autocomplete="off" checked="true">
                                 <label for="switchResource-1"></label>
