--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <link rel="stylesheet" href="libs/fancySearch/fancySearch.css">
     <!-- endbuild -->
     <link rel="stylesheet" href="libs/JavaScript-autoComplete/auto-complete.css">
+    <!-- <link rel="stylesheet" href="libs/autoComplete.js-10.2.7/dist/css/autoComplete.css"> -->
     <link rel="stylesheet" href="libs/pop-pop/pop-pop.min.css">
 
     <!-- <link rel="stylesheet" type="text/css" href="https://unpkg.com/dygraphs@2.2.1/dist/dygraph.min.css" /> -->
@@ -250,6 +251,13 @@
     <script src="libs/picolog/picolog.min.js"></script>
     <script src="libs/lazysizes.min.js"></script>
     <script src="libs/JavaScript-autoComplete/auto-complete.js"></script>
+
+    <!-- 
+        Get javascript file from /dist/js folder
+        Get stylesheet file from /dist/css folder
+        Get search icon from /dist/css/images folder 
+    -->
+    <!-- <script src="libs/autoComplete.js-10.2.7/dist/autoComplete.min.js"></script> -->
 
     <!-- <script type="text/javascript" src="https://unpkg.com/dygraphs@2.2.1/dist/dygraph.min.js"></script> -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> -->
