style tweaks to treatments + fixed visibility of termFreqChart

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css">
     -->
+
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Fjalla+One">
   </head>
   <body>
     
