--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     -->
 
     <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css2?family=Fjalla+One">
+          href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Lora">
   </head>
   <body>
     
