adv search visible only in tablets and more

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 </div> -->
 
                 
-                <div class="button r" id="button-1" aria-label="toggle advanced search" data-pop="left" data-pop-no-shadow data-pop-arrow>
+                <div class="button r hidden" id="button-1" aria-label="toggle advanced search" data-pop="left" data-pop-no-shadow data-pop-arrow>
                     <input name="searchtype" type="checkbox" class="checkbox" value="simple">
                     <div class="knobs"></div>
                     <div class="layer"></div>
