first instance of dashboard

--- a/explorations/dashboard.html
+++ b/explorations/dashboard.html
@@ -877,10 +877,10 @@
             return options;
         }
         
-        renderYearlyCounts(data, 'Treatments');
-        renderYearlyCounts(data, 'Species');
-        renderYearlyCounts(data, 'Articles');
-        renderYearlyCounts(data, 'Journals');
+        // renderYearlyCounts(data, 'Treatments');
+        // renderYearlyCounts(data, 'Species');
+        // renderYearlyCounts(data, 'Articles');
+        // renderYearlyCounts(data, 'Journals');
         renderTreeMap();
     </script>
   </body>
