--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
     <link rel="stylesheet" href="css/cssToggle.css">
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/charts.css">
+    <link rel="stylesheet" href="css/dashboard.css">
     <link rel="stylesheet" href="css/throbber.css">
     <link rel="stylesheet" href="css/pager.css">
     <link rel="stylesheet" href="css/map.css">
     <link rel="stylesheet" href="css/treatmentDetails.css">
-    <link rel="stylesheet" href="css/media-queries.css">
+    <!-- <link rel="stylesheet" href="css/media-queries.css"> -->
     <link rel="stylesheet" href="libs/fancySearch/fancySearch.css">
     <link rel="stylesheet" href="css/sparkline.css">
     <!-- endbuild -->
@@ -329,6 +330,15 @@
                 <div id="grid-images"></div>
                 <div id="pager"></div>
             </div>
+        </section>
+
+        <section id="dashboard" class="modal hidden noblock">
+            <a href="#" class="close modalToggle">close</a>
+            <div id="charts"></div>
+            <!-- <div id="chartResource"></div>
+            <div id="chartSpecies"></div>
+            <div id="chartArticles"></div>
+            <div id="chartJournals"></div> -->
         </section>
 
         <section id="about" class="modal hidden noblock">
